--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,73 +1,150 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Significa</title>
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css" />
+    <link rel="stylesheet" href="style/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Your go-to digital agency
-    Significa is a digital design-led agency mainly focused on Product Development.
-    Oopsie for users — Your favourite food, one click away!
-    Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday.
-    UI/UX, Front End, Front End
-    AKASHA — Open systems to expand our collective mind.
-    UI/UX, Front End, Illustration
-    We build digital products
-    Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-    Strategy
-    UX research
-    Business strategy
-    Brand strategy
-    Product strategy
-    Product management
-    Product design
-    Product design
-    User experience
-    User interface
-    Brand development
-    Illustration
-    Motion & Video
-    Development
-    Development
-    Front-end engineering
-    Web-app development
-    Native app development
-    Development operations
-    View services
-    View services
-    What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds for your style guides
-    Tutorial on Medium
-    An iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium
-    On creating synergies — Sharing without compromising our identity
-    Article on Medium
-    Enter the Lab
-    Drop by, we're hiring.
-    We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.
-    View careers
-    Legal © 2019
-    Say
-    hello@significa.co
-    (+351) 226 001 751
-    Links
-    Home
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Network
-    Coletiv
-    Adamant
-    Follow us
+    <div class="container-fluid">
+      <nav class="navbar">
+        <img src="images/logo.svg" alt="Significa Logo" />
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Showcase</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Careers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Labs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div style="background:transparent !important" class="jumbotron jumbotron-fluid" >
+      <div class="container-fluid">
+        <h1 class="m-5">Your go-to</br> digital agency</h1>
+      </div>
+      <div class="container-fluid">
+        <p>Significa is a digital design-led agency mainly</br> focused on Product Development.</p>
+      </div>
+    </div>
+      
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/2.png" class="img-fluid" />
+          <p>
+            Oopsie for users — Your favourite food, one click away! Business Analysis, Product
+            Management, Consultancy & 5 others
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <img src="images/1.png" class="img-fluid" />
+          <p>Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="images/3.png" class="img-fluid" />
+          <p>AKASHA — Open systems to expand our collective mind. UI/UX, Front End, Illustration</p>
+        </div>
+      </div>
+    </div>
+    <div class="container-md">
+      <div class="row">
+        <div class="col">
+          <h3>We build digital products</h3>
+        </div>
+        <div class="col">
+          <p>
+            Having a design-led approach to what we do defines who we are. We take on products from
+            inception to launch, from business model to people's pocket, from wireframe to
+            continuous deployment.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-md">
+      <div class="row">
+        <div class="col">
+          <h6>Strategy</h6>
+          <ul>
+            <li>UX research</li>
+            <li>Business strategy</li>
+            <li>Brand strategy</li>
+            <li>Product strategy</li>
+            <li>Product management</li>
+          </ul>
+        </div>
+        <div class="col">
+          <h6>Product design</h6>
+          <ul>
+            <li>User experience</li>
+            <li>User interface</li>
+            <li>Brand development</li>
+            <li>Illustration</li>
+            <li>Motion & Video</li>
+          </ul>
+        </div>
+        <div class="col">
+          <h6>Development</h6>
+          <ul>
+            <li>Front-end engineering</li>
+            <li>Web-app development</li>
+            <li>Native app development</li>
+            <li>Development operations</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div>
+      <a class ="col" href="#" >View services</a>
+    </div>
+    <div class="jumbotron">
+      <div class="row m-5">
+        <div class="col">
+          <h3>What's new on </br> Significa Labs</h3>
+        </div>
+        <div class="col">
+           <ul>
+             <li>
+               Automating releases for UI Kits — How to automate release logs and builds for your style guides </br> Tutorial on Medium
+              </li>
+              <hr>
+               <li>
+                 An iceberg sank the Titanic —
+                But what’s that got to do with text hierarchy? </br> Article on Medium
+              </li>
+              <hr>
+              <li>
+                On creating synergies — Sharing
+                without compromising our identity </br> Article on Medium
+              </li>
+              <hr>
+              <li>Enter the Lab</li> 
+            </ul>
+  </div>
+      </div>
+      
+    </div>
+      Drop by, we're hiring. We are
+    an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop
+    us a line if you’re passionate and talented to do everything you set your mind to. View careers
+    Legal © 2019 Say hello@significa.co (+351) 226 001 751 Links Home Showcase Services About
+    Careers Labs Contact Network Coletiv Adamant Follow us
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="scripts/bootstrap.bundle.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
